--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,6 @@
           placeholder="Mensaje"
           rows= "5"
           cols= "50"
-          value= ""
           />
 
           <br/>
@@ -80,11 +79,8 @@
           <br/>
 
           <input id= "offsetCode"
-          type= "number"
+          type= "text"
           placeholder= "Espacios"
-          min= "1"
-          max= "1000"
-          value= ""
           />
 
           <br/>
@@ -122,7 +118,6 @@
           placeholder="Mensaje"
           rows= "5"
           cols= "50"
-          value= ""
           />
 
           <br/>
@@ -136,11 +131,8 @@
           <br/>
 
           <input id= "offsetDecode"
-          type= "number"
+          type= "text"
           placeholder= "Espacios"
-          min= "1"
-          max= "1000"
-          value =""
           />
 
           <br/>
@@ -195,6 +187,5 @@
     <script src="cipher.js"></script>
     <script src="index.js"></script>
    </body>
-
 
 </html>
