Comentarios de avances de implementación y lenguaje inclusivo

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
    </head>
 
    <body>
-
-<!--     <button id= "buttonClose"> X </button> -->
-
+<!-- AVANCE DE IMPLEMENTACIÓN PARA SEGUNDA ITERACIÓN
+     <button id= "buttonClose"> X </button> -->
      <section id= "paginaInicio">
 
         <header> CRYPTOGRAMAFUN </header>
@@ -21,8 +20,8 @@
 
           (RECUERDA: Puedes utilizar letras mayúsculas y minúsculas,
           evita los signos de puntuación y los acentos.</br>
-          Comparte con tu compañero el número de espacios con el que planeas cifrar
-          para que el pueda descifrarlo con facilidad.) </br></br> ¡Diviértete! =D
+          Comparte con tu compañer@ el número de espacios con el que planeas cifrar
+          para que pueda descifrarlo con facilidad.) </br></br> ¡Diviértete! =D
         </p>
 
           <button id= "botonCodificar"> CODIFICAR </button>
@@ -41,7 +40,7 @@
 
         <p>Selecciona el número de espacios con los que te gustaría codificar
            <br/>
-          (Recuerda mencionarle el número de espacios a tu amigo)
+          (Recuerda mencionarle el número de espacios a tu amig@)
         </p>
 
         <input id= "offsetCode"
@@ -73,7 +72,7 @@
 
         <p> Selecciona el número de espacios con los que te gustaría codificar
             <br/>
-            (Recuerda preguntarle el número de espacios a tu amigo)
+            (Recuerda preguntarle el número de espacios a tu amig@)
         </p>
 
           <input id= "offsetDecode"
@@ -96,7 +95,8 @@
      <section id= "botones">
         <button id= "buttonEnviar"> ENVIAR </button>
         <button id= "iniciar"> INICIAR </button>
-<!--        <button id= "buttonReturn">O</button> -->
+<!-- AVANCE DE IMPLEMENTACIÓN PARA SEGUNDA ITERACIÓN
+       <button id= "buttonReturn">O</button> -->
      </section>
 
     <script src="cipher.js"></script>
