Corrección etiquetas en inglés

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
    <body>
 <!-- AVANCE DE IMPLEMENTACIÓN PARA SEGUNDA ITERACIÓN
      <button id= "buttonClose"> X </button> -->
-     <section id= "paginaInicio">
+     <section id= "homePage">
 
         <header> CRYPTOGRAMAFUN </header>
 
-          <p id= "bienvenida"> Bienvenido al mensajero más seguro y divertido de la Web.
+          <p id= "welcome"> Bienvenido al mensajero más seguro y divertido de la Web.
           ¿Quieres enviar un mensaje súper seguro y de una forma súper
           divertida? ¡Hagámoslo!</br> </br>
 
@@ -24,11 +24,11 @@
           para que pueda descifrarlo con facilidad.) </br></br> ¡Diviértete! =D
         </p>
 
-          <button id= "botonCodificar"> CODIFICAR </button>
-          <button id= "botonDecodificar"> DECODIFICAR </button>
+          <button id= "encode"> CODIFICAR </button>
+          <button id= "decode"> DECODIFICAR </button>
      </section>
 
-     <section id= "paginaCodificar">
+     <section id= "encodePage">
 
         <p> Escribe tu mensaje </p>
 
@@ -49,28 +49,28 @@
 
        </br>
 
-        <button id= "botonCodificar2"> CODIFICAR </button>
+        <button id= "buttonEncode"> CODIFICAR </button>
      </section>
 
-     <section id= "mensajeCodificado">
+     <section id= "encodeMessege">
      </section>
 
-     <section id = "mensajeEnviado">
+     <section id = "sendMessage">
         <p> ¡Tu mensaje ha sido enviado correctamente! </p>
 
      </section>
 
-     <section id= "paginaDecodificar">
+     <section id= "decodePage">
 
         <p> Ingresa tu mensaje </p>
 
-        <input id= "messageCifrado"
+        <input id= "messageToDecode"
          type="textArea"
          placeholder="Mensaje"
          rows= "50"
          cols= "50"/>
 
-        <p> Selecciona el número de espacios con los que te gustaría codificar
+        <p> Selecciona el número de espacios con los que te gustaría decodificar
             <br/>
             (Recuerda preguntarle el número de espacios a tu amig@)
         </p>
@@ -81,20 +81,20 @@
 
         </br>
 
-          <button id= "botonDecodificar2"> DECODIFICAR </button>
+          <button id= "buttonDecode"> DECODIFICAR </button>
      </section>
 
-     <section id= "mensajeDecodificado">
+     <section id= "decodeMessage">
      </section>
 
-     <section id= "vuelvePronto">
+     <section id= "comeBack">
 
         <p> ¡Vuelve pronto! =) </p>
      </section>
 
-     <section id= "botones">
-        <button id= "buttonEnviar"> ENVIAR </button>
-        <button id= "iniciar"> INICIAR </button>
+     <section id= "extraButtons">
+        <button id= "sendButton"> ENVIAR </button>
+        <button id= "backToTop"> INICIAR </button>
 <!-- AVANCE DE IMPLEMENTACIÓN PARA SEGUNDA ITERACIÓN
        <button id= "buttonReturn">O</button> -->
      </section>
