--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
 
         <header> CRYPTOGRAMAFUN </header>
 
-          <p id= "bienvenida"> Bienvenido al mensajero más seguro y divertido de la Web.
+          <p id= "bienvenida"> Bienvenid@ al mensajero más seguro y divertido de la Web.
           ¿Quieres enviar un mensaje súper seguro y de una forma súper
           divertida? ¡Hagámoslo! <br/><br/>
           (RECUERDA: Puedes utilizar letras mayúsculas y minúsculas,
           evita los signos de puntuación y los acentos. <br/>
-          Comparte con tu compañero el número de espacios con el que planeas cifrar
-          para que el pueda descifrarlo con facilidad.) <br/><br/> ¡Diviértete! =D
+          Comparte con tu compañer@ el número de espacios con el que planeas cifrar
+          para que pueda descifrarlo con facilidad.) <br/><br/> ¡Diviértete! =D
           </p>
 
           <button id= "botonCodificar"> CODIFICAR </button>
@@ -40,7 +40,7 @@
 
         <p>Selecciona el número de espacios con los que te gustaría codificar
            <br/>
-          (Recuerda mencionarle el número de espacios a tu amigo)
+          (Recuerda mencionarle el número de espacios a tu amig@)
         </p>
 
         <input id= "offsetCode"
@@ -72,7 +72,7 @@
 
         <p> Selecciona el número de espacios con los que te gustaría codificar
             <br/>
-            (Recuerda preguntarle el número de espacios a tu amigo)
+            (Recuerda preguntarle el número de espacios a tu amig@)
         </p>
 
           <input id= "offsetDecode"
@@ -103,3 +103,5 @@
    </body>
 
 </html>
+
+<!-- OJO!!! PENDIENTE CAMBIAR ETIQUETAS A INGLÈS!!! -->
